--- a/CryptoApp/templates/base.html
+++ b/CryptoApp/templates/base.html
@@ -13,9 +13,10 @@
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Purchase</a></li>
-                  <li><a href="#">Status</a></li>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/purchase">Purchase</a></li>
+                  <li><a href="/status">Status</a></li>
+                  <li><a href="/logout">Logout</a></li>
                 </ul>
               </nav>
 
