--- a/CryptoApp/templates/status.html
+++ b/CryptoApp/templates/status.html
@@ -2,6 +2,22 @@
 
 {% block section %}
 
-This is status page 
+
+<h1>Investment status</h1>
+<table>
+    <tr>
+        <td style="text-align: center;">
+            <p>Invested:</p>
+            <p>Recovered:</p>
+            <p>Invested:</p>
+            <p>Price at purchase:</p>
+            <p>Current value:</p>
+        </td>
+    </tr>
+</table>
+
+
+
+
 
 {% endblock %}
