added button roles in base;color in 1st tr table;added calc and check buttons in purchase, new files in data

--- a/CryptoApp/templates/base.html
+++ b/CryptoApp/templates/base.html
@@ -11,12 +11,12 @@
     
     <header>
         <div class="container">
-            <nav aria-label="breadcrumb">
+            <nav>
                 <ul>
-                  <li><a href="/">Home</a></li>
-                  <li><a href="/purchase">Purchase</a></li>
-                  <li><a href="/status">Status</a></li>
-                  <li><a href="/logout">Logout</a></li>
+                  <li><a href="/" role="button">Home</a></li>
+                  <li><a href="/purchase" role="button">Purchase</a></li>
+                  <li><a href="/status" role="button">Status</a></li>
+                  <li><a href="/logout" role="button">Logout</a></li>
                 </ul>
               </nav>
 
