--- a/CryptoApp/templates/index.html
+++ b/CryptoApp/templates/index.html
@@ -5,8 +5,7 @@
   <h1>Movements List</h1>
 
   <table role="grid">
-      <thead data-theme="dark">
-        <tr>
+        <tr style="background-color: #589edb2e;">
           <th>DATE</th>
           <th>TIME</th>
           <th>COIN FROM</th>
@@ -14,7 +13,6 @@
           <th>COIN TO</th>
           <th>QUANTITY TO</th>
         </tr>
-      </thead>
       <tbody>
         <!-- this loop goes through the list of dic from routes index-->
         {% for item in inform %}
