--- a/CryptoApp/static/pico.css
+++ b/CryptoApp/static/pico.css
@@ -260,7 +260,7 @@ kbd {
   --range-thumb-hover-color: var(--secondary-hover);
   --range-thumb-active-color: var(--primary);
   --table-border-color: var(--muted-border-color);
-  --table-row-stripped-background-color: #f6f8f9;
+  --table-row-stripped-background-color: #312e2e;
   --code-background-color: hsl(205, 20%, 94%);
   --code-color: var(--muted-color);
   --code-kbd-background-color: var(--contrast);
